--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "back-end da aplicação",
   "main": "index.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "3.5.9",
     "mongoose": "5.9.19",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "validator": "^13.1.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
