--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "3.5.9",
     "mongoose": "5.9.19",
+    "multer": "^1.4.2",
     "uuid": "^8.3.0",
     "validator": "^13.1.1"
   },
