--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cors": "2.8.5",
+    "cors": "^2.8.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "helmet": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "3.5.9",
     "mongoose": "5.9.19",
